--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,46 @@ div
 {
     border: 1px solid black;
 }
+
+body
+{
+    background-image: url(../images/dark-grey-terrazzo.png);
+}
+
+h1
+{
+    text-align: center;
+    font-size: 50pt;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: 900;
+    margin: 20px;
+    color: rgba(252, 211, 161, 0.897);
+}
+
+#headerDiv
+{
+    margin: 10px;
+    background-color: rgb(28, 51, 51);
+}
+
+#startBut
+{
+    padding : 15px;
+    
+}
+
+#triviaDiv
+{
+    padding: 30px;
+    background-color: rgba(252, 211, 161, 0.897);
+}
+
+.questionDiv{
+    margin: 10px;
+    padding: 10px;
+}
+
+h3
+{
+    
+}
