--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
-div
+/* div
 {
     border: 1px solid black;
-}
+} */
 
 body
 {
@@ -41,7 +41,14 @@ h1
     padding: 10px;
 }
 
-h3
+.correctDisp
 {
-    
+    display: block;
+}
+
+#correctDisp
+{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    margin: 5px;
 }
